syntax = "proto3";

package botCraft;

import "botCraft/state.proto";
import "botCraft/options.proto";

option go_package = "/pb";

message Action {
  map<int32, EntityAction> entity_actions = 1;
}

message EntityAction {
  MoveAction move_action = 1;
  BuildAction build_action = 2;
  AttackAction attack_action = 3;
  RepairAction repair_action = 4;
}

message MoveAction {
  Point2D target = 1;
  bool find_closest_position = 2;
  bool break_through = 3;
}

message BuildAction {
  EntityType entity_type = 1;
  Point2D position = 2;
}

message AttackAction {
  int32 target = 1;
  AutoAttack auto_attack = 2;
}

message AutoAttack {
  int32 pathfind_range = 1;
  repeated EntityType valid_targets = 2;
}

message RepairAction {
  int32 target_id = 1;
}