syntax = "proto3";
import "botCraft/options.proto";

package botCraft;

option go_package = "/pb";

message State {
  repeated Entity entities = 2;
  repeated Player players = 3;

  int32 nextId = 4;
  uint32 tick = 5;
  repeated AppliedAttack appliedAttacks = 6;
  repeated AppliedRepair appliedRepairs = 7;
  repeated AppliedBuild appliedBuilds = 8;
}

message Player {
  int32 id = 1;
  int32 score = 2;
  int32 resources = 3;
}

message Point2D {
  int32 x = 1;
  int32 y = 2;
}

message Entity {
  int32 id = 1;
  int32 playerId = 2;
  EntityType entityType = 3;
  int32 health = 4;
  Point2D position = 5;
  bool active = 6;
}

message AppliedAttack {
  int32 attackerId = 1;
  int32 targetId = 2;
  int32 damage = 3;
}

message AppliedRepair {
  int32 repairerId = 1;
  int32 targetId = 2;
  int32 healthRestored = 3;
}

message AppliedBuild {
  int32 builderId = 1;
  int32 targetId = 2;
}

